[REF] *: BS5: various
Refs:
https://getbootstrap.com/docs/5.1/migration

Task ID: 2766483

Part-of: odoo/odoo#95450

--- a/addons/lunch/views/lunch_product_views.xml
+++ b/addons/lunch/views/lunch_product_views.xml
@@ -123,7 +123,7 @@
                                                 <div class="float-right text-odoo">
                                                     <field name="price" widget="monetary"/>
                                                 </div>
-                                                <div t-if="record.is_new.raw_value" class="float-right o_lunch_new_product mr-1 badge-pill badge-success">
+                                                <div t-if="record.is_new.raw_value" class="float-end o_lunch_new_product me-1 py-0 border-0 fs-6 badge rounded-pill bg-success">
                                                     New
                                                 </div>
                                                 <strong><span t-esc="record.name.value"/></strong>
