--- a/addons/website_event_track/views/event_track_templates_agenda.xml
+++ b/addons/website_event_track/views/event_track_templates_agenda.xml
@@ -34,7 +34,7 @@
             <div class="d-flex flex-column flex-sm-row justify-content-between w-100">
                 <ul class="o_weagenda_topbar_filters o_wevent_index_topbar_filters nav">
                 </ul>
-                <div class="form-inline pl-sm-3 pr-0">
+                <div class="d-flex pl-sm-3 pr-0">
                     <label class="invisible text-muted mr-2" id="search_summary"><span id="search_number" class="mr-1">0</span>Results</label>
                     <input type="text" class="form-control" placeholder="Filter Tracks..." id="event_track_search"/>
                 </div>
@@ -89,7 +89,7 @@
             </div>
             <small class="float-right text-muted align-self-end"><t t-out="tracks_by_days[day]"/> tracks</small>
         </div>
-        <hr class="mt-2 pb-1 mb-1"/>
+        <hr class="mt-2 mb-2"/>
 
         <!-- Day Agenda -->
         <div class="o_we_online_agenda">
