--- a/addons/website_event/views/event_templates_page_registration.xml
+++ b/addons/website_event/views/event_templates_page_registration.xml
@@ -119,9 +119,9 @@
 <template id="registration_template" name="Registration">
     <div t-if="toast_message" class="o_wevent_register_toaster d-none" t-att-data-message="toast_message"/>
     <div t-if="not event.event_registrations_open" class="bg-white mb-5">
-        <div class="alert alert-info mb-0 d-flex justify-content-between align-items-center" role="status">
+        <div class="alert alert-info mb-0 row g-0 justify-content-between align-items-center" role="status">
             <t t-if="not event.event_registrations_started and not event.event_registrations_sold_out">
-                <div class="col-md-8 d-flex">
+                <div class="col col-md-8 d-flex">
                     <em class="mr-2">Ticket Sales starting on
                         <span class="" t-out="event.start_sale_datetime"
                             t-options="{'widget': 'datetime', 'tz_name': event.date_tz, 'format': 'short'}"/>
@@ -130,14 +130,14 @@
                     <t t-call="website_event.registration_configure_tickets_button"
                         t-if="request.env.user.has_group('event.group_event_manager')"/>
                 </div>
-                <button class="btn btn-danger ml-2 col-md-4"  disabled="1">Registrations not yet open</button>
+                <button class="btn btn-danger col col-md-4"  disabled="1">Registrations not yet open</button>
             </t>
             <t t-else="">
-                <div class="col-md-8">
+                <div class="col col-md-8">
                     <em t-if="event.event_registrations_sold_out">Tickets for this Event are <b>Sold Out</b></em>
                     <em t-else="">Registrations are <b>closed</b></em>
                 </div>
-                <button class="btn btn-danger ml-3 col-md-4 py-2" disabled="1">
+                <button class="btn btn-danger col col-md-4 py-2" disabled="1">
                     <span t-if="event.event_registrations_sold_out">Sold Out</span>
                     <span t-else="">Registrations Closed</span>
                 </button>
@@ -211,8 +211,8 @@
                         </div>
                     </div>
                     <div class="row no-gutters">
-                        <div class="col-md-4 offset-md-8 py-2 pl-md-0 pr-md-2">
-                            <button type="submit" class="btn btn-primary o_wait_lazy_js btn-block a-submit" disabled="" t-attf-id="#{event.id}">
+                        <div class="d-grid col-md-4 offset-md-8 py-2 pl-md-0 pr-md-2">
+                            <button type="submit" class="btn btn-primary o_wait_lazy_js a-submit" disabled="" t-attf-id="#{event.id}">
                                 Register
                                 <t t-if="event.seats_limited and event.seats_max and event.seats_available &lt;= (event.seats_max * 0.2)">
                                     (only <t t-out="event.seats_available"/> available)
@@ -242,7 +242,7 @@
                             <t t-if="event.event_registrations_open">
                                 <span class="text-dark font-weight-bold align-middle px-2">Qty</span>
                                 <link itemprop="availability" content="http://schema.org/InStock"/>
-                                <select t-att-name="'nb_register-%s' % (tickets.id if tickets else 0)" class="w-auto custom-select">
+                                <select t-att-name="'nb_register-%s' % (tickets.id if tickets else 0)" class="d-inline w-auto custom-select">
                                     <t t-set="seats_max_ticket" t-value="(not tickets or not tickets.seats_limited or tickets.seats_available &gt; 9) and 10 or tickets.seats_available + 1"/>
                                     <t t-set="seats_max_event" t-value="(not event.seats_limited or event.seats_available &gt; 9) and 10 or event.seats_available + 1"/>
                                     <t t-set="seats_max" t-value="min(seats_max_ticket, seats_max_event) if tickets else seats_max_event"/>
@@ -258,8 +258,8 @@
                             </t>
                         </div>
                     </div>
-                    <div class="col-lg-4 pt-3 pt-lg-0 pl-2 pl-lg-0">
-                        <button type="submit" class="btn btn-primary o_wait_lazy_js btn-block a-submit" t-attf-id="#{event.id}">
+                    <div class="d-grid col-lg-4 pt-3 pt-lg-0 pl-2 pl-lg-0">
+                        <button type="submit" class="btn btn-primary o_wait_lazy_js a-submit" t-attf-id="#{event.id}">
                             Register
                             <t t-if="event.seats_limited and event.seats_max and event.seats_available &lt;= (event.seats_max * 0.2)">
                                 (only <t t-out="event.seats_available"/> available)
