--- a/addons/mail/static/src/scss/composer.scss
+++ b/addons/mail/static/src/scss/composer.scss
@@ -128,7 +128,7 @@
                     height: 80%;
                 }
 
-                @include media-breakpoint-down(sm) {
+                @include media-breakpoint-down(md) {
                     .o_viewer_pdf, .o_viewer_text {
                         width: map-get($sizes, 100);
                     }
