--- a/addons/mail/static/src/scss/discuss.scss
+++ b/addons/mail/static/src/scss/discuss.scss
@@ -129,7 +129,7 @@
     }
 }
 
-@include media-breakpoint-down(sm) {
+@include media-breakpoint-down(md) {
 
     .o_main_navbar > ul.o_menu_systray > li .dropdown-menu.show {
         border: none;
