--- a/addons/mail/static/src/scss/kanban_view.scss
+++ b/addons/mail/static/src/scss/kanban_view.scss
@@ -11,7 +11,7 @@ $o-kanban-attachement-image-size: 80px;
 
             + div {
                 padding-left: $o-kanban-attachement-image-size + $o-kanban-inside-hgutter;
-                @include media-breakpoint-down(sm) {
+                @include media-breakpoint-down(md) {
                     padding-left:  $o-kanban-attachement-image-size + $o-kanban-inside-hgutter-mobile;
                 }
             }
