--- a/addons/mail/static/src/scss/systray.scss
+++ b/addons/mail/static/src/scss/systray.scss
@@ -87,7 +87,7 @@
 
 // Mobile rules
 // Goal: mock the design of Discuss in mobile
-@include media-breakpoint-down(sm) {
+@include media-breakpoint-down(md) {
     .o_mail_systray_item {
         .o_mail_systray_dropdown {
             position: fixed;
