--- a/addons/mail/static/src/widgets/attachment_viewer/attachment_viewer.scss
+++ b/addons/mail/static/src/widgets/attachment_viewer/attachment_viewer.scss
@@ -51,7 +51,7 @@
     }
 }
 
-@include media-breakpoint-down(xl, $o-extra-grid-breakpoints) {
+@include media-breakpoint-down(xxl, $o-extra-grid-breakpoints) {
     .o_attachment_preview {
         display: none;
     }
