--- a/addons/mass_mailing/static/src/scss/mass_mailing.scss
+++ b/addons/mass_mailing/static/src/scss/mass_mailing.scss
@@ -128,7 +128,7 @@
                 &:hover {
                     font-weight: normal;
                 }
-                @include media-breakpoint-down(xs) {
+                @include media-breakpoint-down(sm) {
                     font-size: 1.4rem;
                     height: 40px;
                     margin-bottom: 30px;
