--- a/addons/sale/static/src/scss/product_configurator.scss
+++ b/addons/sale/static/src/scss/product_configurator.scss
@@ -247,7 +247,7 @@ label.css_attribute_color.css_not_available {
         width: 120px;
     }
 
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
         .td-img,
         .td-price-total {
             display: none;
