--- a/addons/web/static/src/legacy/scss/web_calendar.scss
+++ b/addons/web/static/src/legacy/scss/web_calendar.scss
@@ -385,7 +385,7 @@ $o-cw-filter-avatar-size: 20px;
             justify-content: space-evenly;
             overflow-y: auto;
 
-            @include media-breakpoint-down(sm) {
+            @include media-breakpoint-down(md) {
                 padding-right: 5px;
                 padding-left: 5px;
             }
@@ -458,7 +458,7 @@ $o-cw-filter-avatar-size: 20px;
                 min-width: 25rem;
                 box-sizing: border-box;
 
-                @include media-breakpoint-down(sm) {
+                @include media-breakpoint-down(md) {
                     width: 50%;
                     min-width: 12rem;
                 }
@@ -467,7 +467,7 @@ $o-cw-filter-avatar-size: 20px;
                     width: 21rem;
                     margin: auto;
 
-                    @include media-breakpoint-down(sm) {
+                    @include media-breakpoint-down(md) {
                         width: 95%;
                     }
 
