--- a/addons/web/static/src/search/search_panel/search_panel.scss
+++ b/addons/web/static/src/search/search_panel/search_panel.scss
@@ -19,7 +19,7 @@ $o-searchpanel-filter-default-color: #D59244;
         max-height: 100%;
         position: relative;
 
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(md) {
             overflow: visible;
         }    
     }
