--- a/addons/web/static/src/views/fields/image/image_field.scss
+++ b/addons/web/static/src/views/fields/image/image_field.scss
@@ -22,7 +22,7 @@
         }
     }
 
-    @include media-breakpoint-down(xs, $o-extra-grid-breakpoints) {
+    @include media-breakpoint-down(sm, $o-extra-grid-breakpoints) {
         .o_form_image_controls {
             position: initial;
             opacity: 1;
