--- a/addons/web/static/src/views/form/button_box/button_box.scss
+++ b/addons/web/static/src/views/form/button_box/button_box.scss
@@ -142,7 +142,7 @@
     //     border: 1px solid gray('300');
     //     margin: 0;
     //     padding: 0;
-    //     @include media-breakpoint-down(sm) {
+    //     @include media-breakpoint-down(md) {
     //         // avoid b4 drowdown inline style
     //         position: relative !important;
     //         transform: none !important;
@@ -156,7 +156,7 @@
     //         border: none;
     //         border-bottom: 1px solid gray('300');
 
-    //         @include media-breakpoint-down(sm) {
+    //         @include media-breakpoint-down(md) {
     //             display: inline-block;
     //             width: percentage(1/3);
     //         }
