--- a/addons/web/static/src/webclient/burger_menu/burger_menu.scss
+++ b/addons/web/static/src/webclient/burger_menu/burger_menu.scss
@@ -176,7 +176,7 @@ body.o_home_menu_background .o_burger_menu_topbar .dropdown-toggle {
   color: $o-main-headings-color;
 }
 
-@include media-breakpoint-down(sm) {
+@include media-breakpoint-down(md) {
   .o_debug_dropdown {
     z-index: $zindex-tooltip + 10;
   }
