--- a/addons/web_editor/static/src/scss/web_editor.common.scss
+++ b/addons/web_editor/static/src/scss/web_editor.common.scss
@@ -118,7 +118,7 @@ html, body {
             min-width: 20px;
         }
     }
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
         .table-responsive > table.table {
             table-layout: auto;
         }
@@ -545,7 +545,7 @@ a.o_underline {
     }
 }
 
-@include media-breakpoint-down(sm) {
+@include media-breakpoint-down(md) {
     odoo-wysiwyg-container {
         .panel-heading.note-toolbar {
             overflow-x: auto;
