--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -27,7 +27,7 @@ body.editor_enable.editor_has_snippets {
 }
 
 // Mobile fix for mass mailing
-@include media-breakpoint-down(md) {
+@include media-breakpoint-down(lg) {
     body.editor_enable.editor_has_snippets {
         #web_editor-top-edit {
             position: initial !important;
