--- a/addons/website/static/src/client_actions/configurator/configurator.scss
+++ b/addons/website/static/src/client_actions/configurator/configurator.scss
@@ -199,7 +199,7 @@
         }
 
         &.o_palette_selection_screen {
-            @include media-breakpoint-down(md) {
+            @include media-breakpoint-down(lg) {
                 .o_detect_logo {
                     width: 100% !important;
                 }
@@ -218,7 +218,7 @@
                 }
             }
 
-            @include media-breakpoint-down(sm) {
+            @include media-breakpoint-down(md) {
                 .o_palette_card_container {
                     width: 50% !important;
                 }
@@ -267,13 +267,13 @@
         }
 
         &.o_feature_selection_screen {
-            @include media-breakpoint-down(md) {
+            @include media-breakpoint-down(lg) {
                 .o_feature_card_container {
                     width: 50% !important;
                 }
             }
 
-            @include media-breakpoint-down(sm) {
+            @include media-breakpoint-down(md) {
                 .o_feature_card_container {
                     width: 100% !important;
                 }
