--- a/addons/website/static/src/scss/website.backend.scss
+++ b/addons/website/static/src/scss/website.backend.scss
@@ -70,7 +70,7 @@
                 flex-flow: row wrap;
                 justify-content: flex-start;
                 > .o_inner_box {
-                    @include media-breakpoint-down(sm) {
+                    @include media-breakpoint-down(md) {
                         flex: 1 1 200px;
                         display: block !important;
                     }
@@ -230,7 +230,7 @@
         justify-content: space-between;
         margin: 0 0 0 ($o-kanban-record-margin - 2 * $grid-gutter-width);
 
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(md) {
             padding-left: $o-horizontal-padding - $o-kanban-record-margin;
             padding-right: $o-horizontal-padding;
         }
