--- a/addons/website/static/src/snippets/s_popup/001.scss
+++ b/addons/website/static/src/snippets/s_popup/001.scss
@@ -10,7 +10,7 @@
     .modal-dialog {
         height: auto;
         min-height: 100%;
-        @include media-breakpoint-down(xs) {
+        @include media-breakpoint-down(sm) {
             min-height: calc(100% - 2 * #{$modal-dialog-margin});
         }
     }
