--- a/addons/website/static/src/snippets/s_showcase/000.scss
+++ b/addons/website/static/src/snippets/s_showcase/000.scss
@@ -47,7 +47,7 @@
     }
 }
 
-@include media-breakpoint-down(md) {
+@include media-breakpoint-down(lg) {
     #wrapwrap .s_showcase:not([data-vcss]) {
         .text-right, .text-left {
             text-align: center;
