--- a/addons/website/static/src/snippets/s_timeline/000.scss
+++ b/addons/website/static/src/snippets/s_timeline/000.scss
@@ -52,7 +52,7 @@
             left: 0%;
             right: 0%;
         }
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(md) {
             position: relative;
             margin: 20px 0px;
         }
