--- a/addons/website_blog/static/src/snippets/s_blog_posts/000.scss
+++ b/addons/website_blog/static/src/snippets/s_blog_posts/000.scss
@@ -250,7 +250,7 @@
                     width: 100%;
                 }
             }
-            @include media-breakpoint-down(sm) {
+            @include media-breakpoint-down(md) {
                 display: block;
             }
         }
