--- a/addons/website_event/static/src/scss/event_templates_list.scss
+++ b/addons/website_event/static/src/scss/event_templates_list.scss
@@ -38,7 +38,7 @@
             }
         }
         .opt_events_list_rows {
-            @include media-breakpoint-down(sm) {
+            @include media-breakpoint-down(md) {
                 header {
                     height: 200px;
                 }
