--- a/addons/website_profile/static/src/scss/website_profile.scss
+++ b/addons/website_profile/static/src/scss/website_profile.scss
@@ -84,7 +84,7 @@ $owprofile-color-bg: mix($body-bg, #efeff4);
 }
 
 .o_wprofile_tabs_content {
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
         background-color: $nav-tabs-link-active-bg;
         padding:0 ($grid-gutter-width * 0.5);
     }
@@ -161,7 +161,7 @@ $owprofile-color-bg: mix($body-bg, #efeff4);
     }
 
     .o_wprofile_all_users_nav_btn_container {
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(md) {
             ~ .o_wprofile_user_profile_sub_nav_mobile_col {
                 padding-left: 0;
             }
