--- a/addons/website_sale/static/src/scss/website_sale_frontend.scss
+++ b/addons/website_sale/static/src/scss/website_sale_frontend.scss
@@ -41,7 +41,7 @@ $o-wsale-wizard-label-completed: $success;
                 width: percentage(1/4);
             }
         }
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(md) {
             &.disabled, &.complete {
                 display:none;
             }
@@ -71,7 +71,7 @@ $o-wsale-wizard-label-completed: $success;
                 display: block;
                 margin: (0.625rem + $tmp-dot-radius) 0 20px 0;
             }
-            @include media-breakpoint-down(sm) {
+            @include media-breakpoint-down(md) {
                 margin-left: -15px;
                 font-size: 24px;
             }
