--- a/addons/website_slides/static/src/scss/website_slides.scss
+++ b/addons/website_slides/static/src/scss/website_slides.scss
@@ -401,7 +401,7 @@ $truncate-limits: 2, 3, 10;
     }
 
     .o_wslides_tabs_content {
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(md) {
             background-color: $nav-tabs-link-active-bg;
             padding:0 ($grid-gutter-width * 0.5);
         }
