--- a/addons/base_import/static/src/legacy/scss/base_import.scss
+++ b/addons/base_import/static/src/legacy/scss/base_import.scss
@@ -6,7 +6,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
         position: static;
     }
 
