--- a/addons/im_livechat/static/src/legacy/public_livechat.scss
+++ b/addons/im_livechat/static/src/legacy/public_livechat.scss
@@ -19,7 +19,7 @@ $o-mail-thread-window-zindex: $zindex-modal + 1 !default;
     z-index: $o-mail-thread-window-zindex;
     box-shadow: -5px -5px 10px rgba(black, 0.18);
 
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
         width: 100%;
         height: 100%!important;
         box-shadow: none;
@@ -43,7 +43,7 @@ $o-mail-thread-window-zindex: $zindex-modal + 1 !default;
         background-color: $o-brand-odoo;
         padding: 8px;
 
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(md) {
             align-items: center;
             height: $o-mail-chat-header-height;
             padding: 0;
@@ -143,7 +143,7 @@ $o-mail-thread-window-zindex: $zindex-modal + 1 !default;
     cursor: pointer;
     box-shadow: none;
 
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
         display: none;
     }
 
@@ -235,7 +235,7 @@ $o-mail-thread-window-zindex: $zindex-modal + 1 !default;
     .o_thread_date_separator {
         margin-top: 15px;
         margin-bottom: 30px;
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(md) {
             margin-top: 0px;
             margin-bottom: 15px;
         }
@@ -300,7 +300,7 @@ $o-mail-thread-window-zindex: $zindex-modal + 1 !default;
                 }
             }
 
-            @include media-breakpoint-down(sm) {
+            @include media-breakpoint-down(md) {
                 margin-top: 4px;
                 font-size: x-small;
             }
