--- a/addons/portal/static/src/scss/portal.scss
+++ b/addons/portal/static/src/scss/portal.scss
@@ -47,7 +47,7 @@ header {
                 width: auto;
                 height: $o-theme-navbar-logo-height;
 
-                @include media-breakpoint-down(sm) {
+                @include media-breakpoint-down(md) {
                     max-height: min($o-theme-navbar-logo-height, 5rem);
                 }
             }
@@ -60,7 +60,7 @@ header {
 .navbar {
     margin-bottom: 0;
     .nav.navbar-nav.float-right {
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(md) {
             float: none!important;
         }
     }
@@ -377,7 +377,7 @@ img, .media_iframe_video, .o_image {
 
     @if ($o-portal-mobile-toolbar) {
         #o_portal_navbar_content {
-            @include media-breakpoint-down(md) {
+            @include media-breakpoint-down(lg) {
                 margin: $navbar-padding-y (-$navbar-padding-x) 0;
                 padding: $navbar-padding-y $navbar-padding-x ;
                 border-top: $border-width solid $o-portal-mobile-toolbar-border;
