--- a/addons/web/static/src/legacy/scss/form_view.scss
+++ b/addons/web/static/src/legacy/scss/form_view.scss
@@ -450,7 +450,7 @@ $o-form-label-margin-right: 0px;
             box-sizing: content-box;
             margin: 0;
             padding: 0;
-            @include media-breakpoint-down(sm) {
+            @include media-breakpoint-down(md) {
                 // avoid b4 drowdown inline style
                 position: relative !important;
                 transform: none !important;
@@ -463,7 +463,7 @@ $o-form-label-margin-right: 0px;
                 // Override stronger ':not(.o_invisible_modifier) ~' rule
                 border-width: 0 0 $border-width!important;
 
-                @include media-breakpoint-down(sm) {
+                @include media-breakpoint-down(md) {
                     display: inline-block;
                     width: percentage(1/3);
                 }
@@ -618,7 +618,7 @@ $o-form-label-margin-right: 0px;
     .o_checkbox_optional_field {
         display: flex;
 
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(md) {
             flex-wrap: wrap;
             justify-content: space-between;
         }
