--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -1,7 +1,7 @@
 // Define left and right padding according to screen resolution
 @mixin o-form-sheet-inner-left-padding {
     padding-left: $o-horizontal-padding;
-    @include media-breakpoint-between(lg, xl, $o-extra-grid-breakpoints) {
+    @include media-breakpoint-between(lg,  xxl, $o-extra-grid-breakpoints) {
         padding-left: $o-horizontal-padding*2;
     }
 }
@@ -10,7 +10,7 @@
 }
 @mixin o-form-sheet-inner-right-padding {
     padding-right: $o-horizontal-padding;
-    @include media-breakpoint-between(lg, xl, $o-extra-grid-breakpoints) {
+    @include media-breakpoint-between(lg,  xxl, $o-extra-grid-breakpoints) {
         padding-right: $o-horizontal-padding*2;
     }
 }
@@ -18,7 +18,7 @@
 @mixin o-form-sheet-negative-margin {
     margin-left: -$o-horizontal-padding;
     margin-right: -$o-horizontal-padding;
-    @include media-breakpoint-between(lg, xl, $o-extra-grid-breakpoints) {
+    @include media-breakpoint-between(lg,  xxl, $o-extra-grid-breakpoints) {
         margin-left: -$o-horizontal-padding*2;
         margin-right: -$o-horizontal-padding*2;
     }
@@ -451,7 +451,7 @@ $o-form-label-margin-right: 0px;
             box-sizing: content-box;
             margin: 0;
             padding: 0;
-            @include media-breakpoint-down(sm) {
+            @include media-breakpoint-down(md) {
                 // avoid b4 drowdown inline style
                 position: relative !important;
                 transform: none !important;
@@ -465,7 +465,7 @@ $o-form-label-margin-right: 0px;
                 // Override stronger ':not(.o_invisible_modifier) ~' rule
                 border-width: 0 0 $border-width!important;
 
-                @include media-breakpoint-down(sm) {
+                @include media-breakpoint-down(md) {
                     display: inline-block;
                     width: percentage(1/3);
                 }
@@ -598,7 +598,7 @@ $o-form-label-margin-right: 0px;
     .o_checkbox_optional_field {
         display: flex;
 
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(md) {
             flex-wrap: wrap;
             justify-content: space-between;
         }
