--- a/addons/web_editor/static/src/scss/wysiwyg.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg.scss
@@ -526,7 +526,7 @@ img::selection {
     background-color: rgba(255, 255, 255, .7);
 }
 
-@include media-breakpoint-down(md) {
+@include media-breakpoint-down(lg) {
     #web_editor-top-edit {
         position: initial !important;
         height: initial !important;
